Fixed minor spacing css and finished reset page.

--- a/accounts/static/css/password_reset_confirm.css
+++ b/accounts/static/css/password_reset_confirm.css
@@ -1,16 +1,16 @@
-.login-container {
+.reset-container {
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center; 
 }
 
-.login-card {
+.reset-card {
     max-width: 450px;
     width: 100%;
 }
 
-.login-title {
+.reset-title {
     color: #0c8d42;
     margin-left: auto;
     margin-right: auto;
@@ -22,17 +22,15 @@
     margin-left: auto;
     margin-right: auto;
 }
-
-/* New rule for the register link */
-.register-reset-link {
+.password-reset-link {
     color: #0c8d42; /* This is a light green color */
 }
 
-.register-reset-link:hover {
+.password-reset-link:hover {
     color: #116936; /* A slightly darker green for hover state */
 }
 
-#register-change p{
+#reset-change p{
     margin-top: 0;
     margin-bottom: 0.75rem;
 }
